Fix too large click target on RSS link

--- a/Development/sass/blog/_header.scss
+++ b/Development/sass/blog/_header.scss
@@ -4,7 +4,7 @@
 
 #rss {
 	float: right;
-	padding-top: 5rem;
+	margin-top: 5rem;
 	font-size: 80%;
 
 	.rss-icon {
